--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-aspose.email-for-python-via-net>=25.5
-pandas>=2.0.3
-python-dateutil>=2.8.2
-tabulate>=0.9.0
-scikit-learn>=1.3.0
-numpy>=1.24.0
-scipy>=1.10.0
-psutil>=5.9.0
-keyring>=24.0.0
-holidays>=0.34
+aspose.email-for-python-via-net>=25.5,<26.0
+pandas>=2.0.3,<3.0
+python-dateutil>=2.8.2,<3.0
+tabulate>=0.9.0,<1.0
+scikit-learn>=1.3.0,<2.0
+numpy>=1.24.0,<2.0
+scipy>=1.10.0,<2.0
+psutil>=5.9.0,<6.0
+keyring>=24.0.0,<25.0
+holidays>=0.34,<1.0
+msal>=1.20.0,<2.0
+requests>=2.28.0,<3.0
