--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,23 @@ jobs:
     steps:
     - uses: actions/checkout@v4
 
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.10'
+
+    - name: Install security tools
+      run: |
+        pip install detect-secrets pip-audit
+
+    - name: Run secret scanning
+      run: |
+        detect-secrets scan --baseline .secrets.baseline --fail-on-unaudited-potential-secrets
+
+    - name: Run dependency vulnerability scanning
+      run: |
+        pip-audit --format=json --output=pip-audit-results.json || true
+
     - name: Run Trivy vulnerability scanner
       uses: aquasecurity/trivy-action@master
       with:
@@ -88,8 +105,17 @@ jobs:
       with:
         sarif_file: 'trivy-results.sarif'
 
+    - name: Upload security scan results
+      uses: actions/upload-artifact@v3
+      if: always()
+      with:
+        name: security-scan-results
+        path: |
+          trivy-results.sarif
+          pip-audit-results.json
+
   build-and-package:
-    needs: [lint-and-test]
+    needs: [lint-and-test, security-scan]
     runs-on: windows-latest
     if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
 
@@ -133,8 +159,41 @@ jobs:
           *.exe
           checksums.txt
 
-  create-release:
+  integration-test:
     needs: [build-and-package]
+    runs-on: windows-latest
+    if: github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main'
+
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Download build artifacts
+      uses: actions/download-artifact@v3
+      with:
+        name: pst-to-dynamics-${{ github.sha }}
+
+    - name: Run integration test on packaged executable
+      run: |
+        # Test that the executable starts and shows help
+        $exe = Get-ChildItem -Path "dist" -Filter "*.exe" | Select-Object -First 1
+        if ($exe) {
+          Write-Host "Testing executable: $($exe.FullName)"
+          # Run with --help flag and timeout after 30 seconds
+          $process = Start-Process -FilePath $exe.FullName -ArgumentList "--help" -PassThru -NoNewWindow
+          $timeout = 30
+          if ($process.WaitForExit($timeout * 1000)) {
+            Write-Host "✅ Executable test passed"
+          } else {
+            Write-Host "⚠️ Executable test timed out"
+            $process.Kill()
+          }
+        } else {
+          Write-Host "❌ No executable found for testing"
+          exit 1
+        }
+
+  create-release:
+    needs: [integration-test]
     runs-on: windows-latest
     if: startsWith(github.ref, 'refs/tags/v')
 
