--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@ $RECYCLE.BIN/
 node_modules/
 npm-debug.log*
 
-# Python (if applicable)
+# Python
 __pycache__/
 *.pyc
 *.pyo
@@ -34,6 +34,35 @@ __pycache__/
 env/
 venv/
 .env
+
+# Build artifacts and distributions
+dist/
+build/
+*.egg-info/
+*.exe
+*.msi
+
+# Database files
+*.db
+*.sqlite
+*.sqlite3
+
+# PyInstaller
+*.spec
+
+# Coverage reports
+htmlcov/
+.coverage
+coverage.xml
+*.cover
+
+# pytest
+.pytest_cache/
+
+# mypy
+.mypy_cache/
+.dmypy.json
+dmypy.json
 
 # .NET (if applicable)
 bin/
